--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     box-sizing: border-box;
 }
 .loader{
+    background-image: url(assests/loader1.gif);
+    background-size: 100% 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -21,7 +23,7 @@ p{
 }
 .wrapper{
     min-height: 100vh;
-    background-image: url(assests/bg6.jpg);
+    background-image: url(assests/bg9.jpeg);
     background-size: 100% 150%;
     display: flex;
     flex-direction: column;
@@ -30,11 +32,13 @@ p{
     background-attachment: fixed;
 }
 .tagline{
+    z-index: 10;
     color: white;
     text-shadow: rgb(0, 0, 0) 0px 0px 5px;
     font-size: 30px;
 }
 .Abhishar{
+    z-index: 10;
     color: white;
     font-size: 72px;
     font-family: 'MedievalSharp', cursive;
@@ -70,7 +74,8 @@ p{
 }
 .greyContainer{
     padding:50px;
-    background-image: url(assests/img2.jpg);
+    background-color: #000000;
+    /* background-image: url(assests/img2.jpg); */
     height: 100vh;
     background-size: cover;
     background-attachment: fixed;
@@ -87,7 +92,7 @@ p{
 }
 .redContainer
 {
-    background-image: url(assests/landing-rev-slider-img-2.jpg);
+    background-color: #000000;
     background-size: cover;
     height: 100vh;
     display: flex;
@@ -139,7 +144,8 @@ p{
     height: 100vh;
 }
 #abhisharInfo{
-    background-image: url(assests/dark-background.gif);
+    background-color: black;
+    /* background-image: url(assests/gladiator.jpg); */
 }
 #intro{
     background-image: url(assests/map.jpg);
@@ -148,11 +154,13 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(assests/landing-rev-slider-img-5-1.jpg);
     background-size: cover;
     height: 100vh;
 }
 ::-webkit-scrollbar{
+    display: none;
+}
+.main-page{
     display: none;
 }
 
@@ -175,4 +183,19 @@ p{
   .fadein.visible {
     opacity: 1;
     transform: translate(0, 0);
+  }
+
+  #dragon1{
+    z-index: 7;
+    height: 100vh;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+  #dragon2{
+    z-index: 8;
+    height: 100vh;
+    position: absolute;
+    bottom: 0;
+    right: 0;
   }
