--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ p{
     font-size: 32px;
 }
 .wrapper{
+    overflow: hidden;
     min-height: 100vh;
     background-image: url(assests/bg9.jpeg);
     background-size: 100% 150%;
@@ -29,16 +30,15 @@ p{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-attachment: fixed;
 }
 .tagline{
-    z-index: 10;
+    z-index: 100;
     color: white;
     text-shadow: rgb(0, 0, 0) 0px 0px 5px;
     font-size: 30px;
 }
 .Abhishar{
-    z-index: 10;
+    z-index: 100;
     color: white;
     font-size: 72px;
     font-family: 'MedievalSharp', cursive;
@@ -73,7 +73,7 @@ p{
     justify-content: right;
 }
 .greyContainer{
-    padding:50px;
+    /* padding:50px; */
     background-color: #000000;
     /* background-image: url(assests/img2.jpg); */
     height: 100vh;
@@ -144,8 +144,9 @@ p{
     height: 100vh;
 }
 #abhisharInfo{
+    display: flex;
+    flex-direction:row;
     background-color: black;
-    /* background-image: url(assests/gladiator.jpg); */
 }
 #intro{
     background-image: url(assests/map.jpg);
@@ -186,16 +187,29 @@ p{
   }
 
   #dragon1{
-    z-index: 7;
+    margin-left: -100px;
+    z-index: 51;
     height: 100vh;
     position: absolute;
     bottom: 0;
     left: 0;
   }
   #dragon2{
-    z-index: 8;
+    margin-right: -100px;
+    z-index: 52;
     height: 100vh;
     position: absolute;
     bottom: 0;
     right: 0;
+  }
+  #gladiator{
+    position: relative;
+    z-index: 50;
+    height: 100%;
+  }
+  #fire{
+    position: absolute;
+    bottom: -200px;
+    z-index: 0;
+    opacity: 0.6;
   }
