--- a/style.css
+++ b/style.css
@@ -85,7 +85,6 @@ p{
     color: white;
     margin-bottom: 70px;
     text-shadow: rgb(0, 0, 0) 0px 0px 60px;
-
 }
 .redContainer
 {
@@ -102,32 +101,25 @@ p{
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     background-repeat: no-repeat;
 }
 .hiddenMid{
     display: none;
 }
 .midContainer:hover span{
-    font-size: 65px;
     margin-top: 0%;
-    height: 100%;
+    height: 150px;
     transition: 500ms;
     text-align: center;
 }
 .midHeading{
-    margin-top: 50%;
+    width: 100%;
+    margin-top: 50vh;
     color: white;
-    font-size: 40px;
     font-weight: bold;
+    font-size: 40px;
     text-shadow: rgb(0, 0, 0) 0px 0px 5px;
-}
-.blackClover{
-    position: relative;
-    background-image: url(assests/landing-rev-2-image-1.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    transform: translateX(65vw);
-    height: 100vh;
 }
 .wizardsContainer{
     background-image: url(assests/Magic.jpg);
@@ -136,6 +128,8 @@ p{
 .wizardsContainer:hover .hiddenMid{
     display: block;
     transition: 500ms;
+    width: 100%;
+    height: 100%;
 }
 .wizardsContainer:hover{
     padding: 0px;
@@ -143,6 +137,8 @@ p{
 }
 .wizardsContainer:hover span{
     display: flex;
+    font-size: 50px;
+    height: 150px;
     justify-content: center;
     align-items: center;
     background-color: black;
@@ -153,6 +149,8 @@ p{
 }
 .SwordsContainer:hover span{
     display: flex;
+    font-size: 50px;
+    height: 150px;
     justify-content: center;
     align-items: center;
     background-color: #232836;
@@ -160,6 +158,8 @@ p{
 .SwordsContainer:hover .hiddenMid{
     display: block;
     transition: 500ms;
+    width: 100%;
+    height: 100%;
 }
 .SwordsContainer:hover{
     padding: 0px;
@@ -173,13 +173,14 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 60px;
+    font-size: 50px;
     height: 150px;
     background-color: #000000;
 }
 .BeastsContainer:hover .hiddenMid{
     display: block;
     width: 100%;
+    height: 100%;
     transition: 500ms;
 }
 .BeastsContainer:hover{
@@ -214,8 +215,8 @@ backdrop-filter: blur(2px);}
     flex-direction: column;
     align-items: center;
     height: 100%;
+    padding: 25px;
     backdrop-filter: blur(3px);
-    /* z-index: 2; */
 }
 .skullContainer{
     display: flex;
@@ -286,7 +287,7 @@ backdrop-filter: blur(2px);}
     height: 100%;
     width: 100%;
 }
-  .fadein {
+  /* .fadein {
     opacity: 0;
     transition: all 2.5s;
     transform: translate(0, -300px);
@@ -295,10 +296,10 @@ backdrop-filter: blur(2px);}
   .fadein.visible {
     opacity: 1;
     transform: translate(0, 0);
-  }
+  } */
 
   #dragon1{
-    margin-left: -100px;
+    margin-left: -250px;
     z-index: 51;
     height: 100vh;
     position: absolute;
@@ -306,7 +307,6 @@ backdrop-filter: blur(2px);}
     left: 0;
   }
   #dragon2{
-    margin-right: -100px;
     z-index: 52;
     height: 100vh;
     position: absolute;
@@ -319,8 +319,11 @@ backdrop-filter: blur(2px);}
     height: 100%;
   }
   #fire{
+    width: 100%;
     position: absolute;
     bottom: -200px;
     z-index: 0;
     opacity: 0.6;
   }
+
+  
