--- a/style.css
+++ b/style.css
@@ -5,31 +5,32 @@
     box-sizing: border-box;
 }
 .loader{
-    background-image: url(assests/loader1.gif);
+    /* background-image: url(assests/loader1.gif); */
     background-size: 100% 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
-    background-color: #000000;
-}
-.loading-animation{
-    width: 100vw;
+    align-items: center;
+    background-color: #f5e5cf;
 }
 p{
     font-family: 'Marcellus', serif;
     color: white;
     text-align: center;
-    font-size: 32px;
+    /* font-size: 32px; */
+    font-size: 2.2em;
+
 }
 .wrapper{
     overflow: hidden;
     min-height: 100vh;
-    background-image: url(assests/bg9.jpeg);
+    background-image: url(assests/background_2.jpg);
     background-size: 100% 150%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    padding-left: 40px;
+    /* align-items: center; */
 }
 .tagline{
     z-index: 100;
@@ -84,7 +85,7 @@ p{
 .heading1{
     color: white;
     margin-bottom: 70px;
-    text-shadow: rgb(0, 0, 0) 0px 0px 60px;
+    text-shadow: rgb(0, 0, 0) 0px 0px 50px;
 }
 .redContainer
 {
@@ -124,6 +125,7 @@ p{
 .wizardsContainer{
     background-image: url(assests/Magic.jpg);
     background-size: cover;
+    background-position: center;
 }
 .wizardsContainer:hover .hiddenMid{
     display: block;
@@ -146,6 +148,8 @@ p{
 .SwordsContainer{
     background-image:url(assests/sword.jpg) ;
     background-size: cover;
+    background-position: center;
+
 }
 .SwordsContainer:hover span{
     display: flex;
@@ -167,6 +171,7 @@ p{
 }
 .BeastsContainer{
     background-image: url(assests/beast.jpg);
+    background-position: center;
     background-size: cover;
 }
 .BeastsContainer:hover span{
@@ -207,16 +212,21 @@ p{
     padding: 50px;
 }
 #intro{
-    background-image: url(assests/map.jpg);
-backdrop-filter: blur(2px);}
+    background-image: url(assests/background_1.jpg);
+backdrop-filter: blur(2px);
+text-shadow: rgb(0, 0, 0) 0px 0px 5px;
+
+}
 .introText{
+    text-shadow: rgb(0, 0, 0) 0px 0px 5px;
     display: flex;
+    background-color: #0000006e;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     height: 100%;
-    padding: 25px;
-    backdrop-filter: blur(3px);
+    padding: 100px;
+    /* backdrop-filter: blur(3px); */
 }
 .skullContainer{
     display: flex;
@@ -325,5 +335,119 @@ backdrop-filter: blur(2px);}
     z-index: 0;
     opacity: 0.6;
   }
-
-  
+.themeSection{
+    background-image: url(assests/background_white.jpg);
+    backdrop-filter: blur(5px);
+background-size: cover;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    color: white;
+    height: 100vh;
+    padding: 50px;
+}
+.themeSection iframe{
+    height: 500px;
+    aspect-ratio: 16/9;
+}
+.themeleft{
+    width: 800px;
+}
+.themeRight{
+    display: flex;
+    align-items: center;
+justify-content: center;
+}
+.themeText{
+    font-size: 70px;
+    text-align: left;
+    text-shadow: #000000 0px 0px 30px;
+}
+.cardsContainer{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: space-between;
+}
+.themeCard{
+    height: 400px;
+    border-radius: 15px;
+    min-height: 300px;
+    width: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(255, 255, 255, 0.322);
+}
+.CardHeading{
+    text-align: center;
+    padding: 10px;
+    font-size: 30px;
+}
+#card1{
+    background-image: url(assests/Magic.jpg);
+    background-size: cover;
+    text-shadow: black 0px 0px 5px;
+    animation: float 1000ms 500ms infinite alternate ease-in-out;
+}
+#card2{
+    background-image: url(assests/sword.jpg);
+    background-size: cover;
+    background-position: center center;
+    text-shadow: black 0px 0px 5px;
+    animation: float 1000ms 700ms  infinite alternate ease-in-out;
+}
+#card3{
+    background-image: url(assests/beast.jpg);
+    background-size: cover;
+    text-shadow: black 0px 0px 5px;
+    animation: float 1000ms 300ms infinite  alternate ease-in-out;
+}
+.themeCard:hover .CardHeading{
+    display: none;
+}
+.themeCard:hover{
+    transition: 700ms;
+        box-shadow: rgb(0, 0, 0) 10px 1px 30px;
+}
+.innerCard{
+    width: 100%;
+    display: none;
+    height: inherit;
+}
+#innerCard1{
+    background-image: url(assests/dumbledore.gif);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+#innerCard2{
+    background-image: url(assests/blade-cut-smite.gif);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+#innerCard3{
+    background-image: url(assests/dragonHidden.gif);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+.themeCard:hover .innerCard{
+    display: block;
+    height: inherit;
+    border-radius: inherit;
+}
+.loading_animation{
+    height: 300px;
+}
+@keyframes float {
+    0%{
+        margin-top: 90px;
+    }
+    100%{
+        margin-top: 10px;
+    }
+    
+}
