--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ p{
     color: white;
     text-align: center;
     /* font-size: 32px; */
-    font-size: 2.2em;
+    font-size: 1.8em;
 
 }
 .wrapper{
@@ -215,7 +215,8 @@ p{
     background-image: url(assests/background_1.jpg);
 backdrop-filter: blur(2px);
 text-shadow: rgb(0, 0, 0) 0px 0px 5px;
-
+min-height: 100vh;
+height: fit-content;
 }
 .introText{
     text-shadow: rgb(0, 0, 0) 0px 0px 5px;
@@ -224,7 +225,8 @@ text-shadow: rgb(0, 0, 0) 0px 0px 5px;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    min-height: 100vh;
+height: fit-content;
     padding: 100px;
     /* backdrop-filter: blur(3px); */
 }
@@ -293,10 +295,7 @@ text-shadow: rgb(0, 0, 0) 0px 0px 5px;
     flex-direction: row;
     justify-content: center;
 }
-.launchVideo iframe{
-    height: 100%;
-    width: 100%;
-}
+
   /* .fadein {
     opacity: 0;
     transition: all 2.5s;
@@ -340,27 +339,29 @@ text-shadow: rgb(0, 0, 0) 0px 0px 5px;
     backdrop-filter: blur(5px);
 background-size: cover;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
     color: white;
-    height: 100vh;
-    padding: 50px;
+    min-height: 100vh;
+    height: fit-content;
+    padding: 30px;
 }
 .themeSection iframe{
-    height: 500px;
+    height: 350px;
     aspect-ratio: 16/9;
 }
 .themeleft{
-    width: 800px;
+    width: 650px;
 }
 .themeRight{
+    margin-left: 10px;
     display: flex;
     align-items: center;
 justify-content: center;
 }
 .themeText{
-    font-size: 70px;
+    font-size: 60px;
     text-align: left;
     text-shadow: #000000 0px 0px 30px;
 }
@@ -371,10 +372,10 @@ justify-content: center;
     justify-content: space-between;
 }
 .themeCard{
-    height: 400px;
+    height: 300px;
     border-radius: 15px;
     min-height: 300px;
-    width: 250px;
+    width: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -444,10 +445,10 @@ justify-content: center;
 }
 @keyframes float {
     0%{
-        margin-top: 90px;
+        margin-top: 60px;
     }
     100%{
-        margin-top: 10px;
+        margin-top: 0px;
     }
     
 }
