--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ p{
 .wrapper{
     overflow: hidden;
     min-height: 100vh;
-    background-image: url(assests/background_2.jpg);
+    background-image: url(assests/background_20.webp);
     background-size: 100% 150%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 40px;
+    padding-left: 100px;
     /* align-items: center; */
 }
 .tagline{
@@ -247,7 +247,7 @@ height: fit-content;
     justify-content: center;
     text-align: center;
     color: #fff;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -255,25 +255,41 @@ height: fit-content;
     font-size: 28px;
 }
 .qualityButtons{
-    height: 100px;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    justify-content: space-between;
+}
+.qualityButtons a{
+    margin: 10px;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+}
+.qualityButtons a:hover{
+    color: yellow;
+    cursor: pointer;
 }
 .lowQuality{
     color: white;
     aspect-ratio: 1/1;
-    height: 100%;
-    background-size: cover;
+    height: 80px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     background-image: url(assests/lowQuality.gif);
     mix-blend-mode:hard-light;
     text-decoration: none;
 }
-.lowQuality::after{
+/* .lowQuality::after{
     content: "Standard Resolution";
     font-size: 17px;
     text-shadow: rgb(0, 0, 0) 0px 0px 1px;
-}
+} */
 .highQuality::after{
     text-align: center;
     font-size: 17px;
@@ -290,9 +306,13 @@ height: fit-content;
     background-image:url(assests/highQuality.gif) ;
 }
 .launchVideo{
+    width: 100%;
+    background-color: #000000;
     height: 100vh;
     display: flex;
     flex-direction: row;
+    aspect-ratio: 16/9;
+    align-items: center;
     justify-content: center;
 }
 
@@ -337,48 +357,46 @@ height: fit-content;
 .themeSection{
     background-image: url(assests/background_white.jpg);
     backdrop-filter: blur(5px);
-background-size: cover;
+    background-size: cover;
     display: flex;
-    justify-content: center;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: no-wrap;
+    justify-content: space-between;
     color: white;
     min-height: 100vh;
     height: fit-content;
-    padding: 30px;
+    /* padding: 30px; */
 }
-.themeSection iframe{
-    height: 350px;
+iframe{
+    height: 100%;
     aspect-ratio: 16/9;
 }
-.themeleft{
-    width: 650px;
-}
-.themeRight{
-    margin-left: 10px;
-    display: flex;
-    align-items: center;
-justify-content: center;
+/* .themeleft{
+    width: 90%;
 }
 .themeText{
     font-size: 60px;
     text-align: left;
     text-shadow: #000000 0px 0px 30px;
-}
+} */
 .cardsContainer{
-    margin-top: 30px;
+    /* margin-top: 30px; */
     display: grid;
+    height: 80%;
+    width: 100%;
     grid-template-columns: auto auto auto;
     justify-content: space-between;
 }
 .themeCard{
-    height: 300px;
+    height: 80%;
+    aspect-ratio: 3/4;
     border-radius: 15px;
     min-height: 300px;
     width: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-position: center;
     border: 1px solid rgba(255, 255, 255, 0.322);
 }
 .CardHeading{
@@ -446,9 +464,76 @@ justify-content: center;
 @keyframes float {
     0%{
         margin-top: 60px;
+        box-shadow: rgba(0, 0, 0, 0.61) 0px 10px 10px;
     }
     100%{
         margin-top: 0px;
     }
     
+}
+.left{
+    height: 100vh;
+    width: 450px;
+}
+.right{
+    background-image: url(assests/banner.png);
+    background-size: cover;
+    background-position: center center;
+    padding-right: 100px !important;
+    padding: 30px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.theme_Text{
+    font-size: 52px;
+    text-shadow: black 1px 1px 5px;
+}
+.theme_Card{
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    margin: 5px;
+    aspect-ratio: 3/5;
+    background-size: cover;
+    background-position: center;
+    text-shadow: black 1px 1px 5px;
+    transition: 500ms;
+}
+.theme_Card:hover p{
+    display: none;
+}
+#card_1{
+    animation: float 1000ms 500ms infinite  alternate ease-in-out;
+    background-image:url(assests/Magic.jpg) ;
+}
+#card_2{
+    animation: float 1000ms 300ms infinite  alternate ease-in-out;
+    background-image:url(assests/sword.jpg) ;
+}
+#card_3{
+    animation: float 1000ms 100ms infinite  alternate ease-in-out;
+    background-image:url(assests/beast.jpg) ;
+}
+#card_1:hover{
+    background-image: url(assests/dumbledore.gif);
+}
+#card_2:hover{
+    background-image: url(assests/blade-cut-smite.gif);
+}
+#card_3:hover{
+    background-image: url(assests/dragonHidden.gif);
+}
+.cards_container
+{
+    display: flex;
+    justify-content: space-evenly;
+}
+.themeOverlay{
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.507);
 }
