--- a/style2.css
+++ b/style2.css
@@ -11,7 +11,7 @@ body{
     background:linear-gradient(#2b1055,#7597de);
 }
 header{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -20,6 +20,7 @@ header{
     justify-content: space-between;
     align-items: center;
     z-index: 10000;
+    background-color: rgba(0, 0, 0, 0.342);
 }
 header .logo{
     height: 100px;
